test/Fail/Issue308a.err
Issue308a.agda:9.7-12: error: [AmbiguousParseForApplication]
Don't know how to parse d d x. Could mean any one of:
  (d d) x
  d x
Operators used in the grammar:
  d d (prefix notation, level 20) [d (Issue308a.agda:4.3-4)]
Identifiers used in the grammar that overlap with the operators:
  d
when scope checking d d x
